overlays/uksouth-tools/bridge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bridge
  namespace: default
  labels:
    app: bridge
spec:
  selector:
    matchLabels:
      app: bridge
  template:
    metadata:
      labels:
        app: bridge
    spec:
      containers:
        - name: bridge
          image: binkcore.azurecr.io/bridge:latest
          ports:
            - containerPort: 6502
              name: http
          resources:
            limits:
              cpu: 1000m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 256Mi
      imagePullSecrets:
        - name: binkcore.azurecr.io
